fix bug #46185 (importNode changes the namespace of an XML element) add test