ext/dom/node.c
@@ -17,7 +17,7 @@
    +----------------------------------------------------------------------+
 */
 
-/* $Id: node.c,v 1.63 2008/09/22 15:09:06 rrichards Exp $ */
+/* $Id: node.c,v 1.64 2008/09/29 16:52:03 rrichards Exp $ */
 
 #ifdef HAVE_CONFIG_H
 #include "config.h"
@@ -178,15 +178,29 @@ const zend_function_entry php_dom_node_class_functions[] = { /* {{{ */
 
 static void dom_reconcile_ns(xmlDocPtr doc, xmlNodePtr nodep) /* {{{ */
 {
-	xmlNsPtr nsptr;
+	xmlNsPtr nsptr, nsdftptr, curns, prevns = NULL;
 
 	if (nodep->type == XML_ELEMENT_NODE) {
 		/* Following if block primarily used for inserting nodes created via createElementNS */
-		if (nodep->nsDef != NULL && nodep->nsDef->href != NULL) {
-			if((nsptr = xmlSearchNsByHref(doc, nodep->parent, nodep->nsDef->href)) && 
-				(nodep->nsDef->prefix == NULL || xmlStrEqual(nsptr->prefix, nodep->nsDef->prefix))) {
-				dom_set_old_ns(doc, nodep->nsDef);
-				nodep->nsDef = NULL;
+		if (nodep->nsDef != NULL) {
+			curns = nodep->nsDef;
+			while (curns) {
+				nsdftptr = curns->next;
+				if (curns->href != NULL) {
+					if((nsptr = xmlSearchNsByHref(doc, nodep->parent, curns->href)) && 
+						(curns->prefix == NULL || xmlStrEqual(nsptr->prefix, curns->prefix))) {
+						curns->next = NULL;
+						if (prevns == NULL) {
+							nodep->nsDef = nsdftptr;
+						} else {
+							prevns->next = nsdftptr;
+						}
+						dom_set_old_ns(doc, curns);
+						curns = prevns;
+					}
+				}
+				prevns = curns;
+				curns = nsdftptr;
 			}
 		}
 		xmlReconciliateNs(doc, nodep);
